k8s/chapitre6/mariadb-and-solidinvoice-svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-svc
  namespace: zerofiltre-bootcamp
spec:
  selector:
    app: mariadb
  clusterIP: None  
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: solidinvoice-svc
  namespace: zerofiltre-bootcamp
spec:
  selector:
    app: solidinvoice
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
