k8s/chapitre6/solidinvoice-ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: zerofiltre-bootcamp
  name: solidinvoice-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
  - host: bootcamp.zerofiltre.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: solidinvoice-svc
          servicePort: 80
  tls: 
  - hosts:
    - bootcamp.zerofiltre.tech
    secretName: bootcamp-zerofiltre-ingress-cert
